--- a/System-Design/Scalable/youtube/Generic_Design.adoc
+++ b/System-Design/Scalable/youtube/Generic_Design.adoc
@@ -101,7 +101,7 @@ A media stream (a video chunk) from the given offset.
   - likes, dislikes
 ```
 
-image::link=https://github.com/amitkumar50/Code-examples/blob/master/System-Design/Scalable/youtube/images/youtube.png?raw=true[video Processing]
+image::https://github.com/amitkumar50/Code-examples/blob/master/System-Design/Scalable/youtube/images/youtube.png?raw=true[video Processing]
 
 ```c
 User                App-server        
