Update and rename Networking/OSI-Layers/Layer-7/Protocols/Encryption_Authentication/Certificates/README.md to Networking/OSI-Layers/Layer-7/Protocols/Encryption_Authentication/Certificates.adoc

--- a/Networking/OSI-Layers/Layer-7/Protocols/Encryption_Authentication/Certificates.adoc
+++ b/Networking/OSI-Layers/Layer-7/Protocols/Encryption_Authentication/Certificates.adoc
@@ -1,22 +1,18 @@
-**Certificates**
-- [Advantages, Disadvantages](#ad)
-- [Cert Example](#ex)
+:toc:
+:toclevels: 6
 
-<a name=ad></a>
-### Advantages, Dis
-**Advantages**
-- _1._ More secure wrt [Pre shared keys](/Networking/OSI-Layers/Layer-3/Security/AAA_Authentication_Authorization_Accounting/Authentication/Type_Of_Authentication/)
-- _2._ More ideal in larger scale environments with numerous peer sites that should not all share a preshared key.
-- _3._ Certificate Revocation status can be checked, which's not the case with Pre shared keys.
-- _4._ Certificates are not easily vulnerable to visual eavesdropping.
+=== Advantages
+* _1._ More secure wrt link:/Networking/OSI-Layers/Layer-3/Security/AAA_Authentication_Authorization_Accounting/Authentication/Type_Of_Authentication/[Pre shared keys]
+* _2._ More ideal in larger scale environments with numerous peer sites that should not all share a preshared key.
+* _3._ Certificate Revocation status can be checked, which's not the case with Pre shared keys.
+* _4._ Certificates are not easily vulnerable to visual eavesdropping.
 
-**Disadvantages**
-- _1._ certificates can be compromised if access to filesystem on which they are stored is obtained.
-- _2._ Complex process wrt psk.
-- _3._ Takes more resources wrt psk.
+=== Disadvantages
+* _1._ certificates can be compromised if access to filesystem on which they are stored is obtained.
+* _2._ Complex process wrt psk.
+* _3._ Takes more resources wrt psk.
 
-<a name=ex></a>
-### Certificate Example
+=== Certificate Example
 ```c
 Certificate:
     Data:
